--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
     height: 500px;
 
     background: url('./assets/background.png') no-repeat center center;
-    background-size: contain; /* or cover */
+    background-size: contain;
     background-position: center center;
 }
 
